--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@
     left: 0;
     right: 0;
     bottom: 0;
-    background: url('/images/check-circle-fill.svg') no-repeat center;
+    background: url('https://s3.us-east-2.amazonaws.com/myownfairytale.com/images/check-circle-fill.svg') no-repeat center;
     background-size: 50%; /* Adjust size of the checkmark */
     opacity: 0; /* Hidden by default */
 }
