--- a/style.css
+++ b/style.css
@@ -13,24 +13,22 @@
 
 .image-wrapper {
     position: relative;
-    margin-bottom: 15px;
+    /* Other styling */
 }
 
 .check-overlay {
     position: absolute;
     top: 0;
     left: 0;
-    right: 0;
-    bottom: 0;
-    background: url('https://s3.us-east-2.amazonaws.com/myownfairytale.com/images/check-circle-fill.svg') no-repeat center;
-    background-size: 50%; /* Adjust size of the checkmark */
-    opacity: 0; /* Hidden by default */
+    width: 30%;
+    height: 30%;
+    background-color: #28a745;
+    opacity: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .selected .check-overlay {
-    opacity: 0.5; /* Show checkmark for selected images */
-}
-
-.selected svg {
-    fill: #28a745;
+    opacity: 1;
 }
